# db-labs

lab1/: Lab1.mdzip  Lab1.sql  README.md  script.ddl
lab2/: .env  README.md  database.sqlite  index.html  package.json  pnpm-lock.yaml  vite.config.ts
lab2/src/: App.svelte  main.ts
lab2/src-tauri/: Cargo.toml  tauri.conf.json
lab2/src-tauri/src/: api.rs  factory_repo.rs  main.rs  manager_repo.rs  models.rs  process_repo.rs  report_gen.rs
lab2/src/lib/: FactoryForm.svelte  ManagerForm.svelte  MyDataTable.svelte  ProcessForm.svelte  ProcessList.svelte  api.ts
lab2/src/routes/: Factories-Managers.svelte  Managers.svelte  Processess.svelte  Report.svelte
