[package]
name = "ice-production"
version = "0.0.0"
description = "ICE DB management"
authors = ["Roka Puzonas"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql"] }
async-std = {version = "1.12.0", features = ["attributes"] }
serde_json = "1.0"
dotenv = "0.15.0"
anyhow = { git = "https://github.com/Seeker14491/anyhow-tauri.git", features = ["backtrace"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
